# MLOps

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  MLOps_requirements.md  MLProject  README.md  clearml_server_up  mlflow_start_server.sh  requirements.txt  run_project.py  setup.cfg  setup.py
.github/workflows/: master-develop-test.yml  pull_request_tests.yml  python-app.yml  release_package.yml  test_cli.yml  test_release.yml
.mlops/: remote_artifacts.json
mlflow_server/: .env  default.env  docker-compose.yml  test_mlflow.py
mlflow_server/k8s/kompose/: db-deployment.yaml  db-service.yaml  (+9 more)
mlflow_server/mlflow/: Dockerfile  mlflow_readme.md  requirements_mlflow.txt
mlflow_server/nginx/: Dockerfile  minio.conf  mlflow.conf  mysql.conf  nginx.conf  registry.conf
mlflow_server/server_test/: test_mlflow.py
mlflow_server_2/: .env  docker-compose.yml
mlflow_server_2/mlflow/: Dockerfile
mlflow_server_config/: docker-compose.yml
mlops/: Experiment.py  ProjectFile.py  __init__.py  _version.py  cli.py
mlops/release/: Release.py  ReleaseCandidate.py  __init__.py
mlops/utils/: Config.py  logger.py
test_network_monai_2d_seg/: data.dvc  generate_synthetic_Data.py
test_network_monai_2d_seg/net/: unet_training_dict.py
tests/config/: test_config.cfg  test_env
tests/data/: Dockerfile  _verison.py  _version.py  requirements.txt  test_config.cfg  test_entry.py  test_env  test_env.sh
tests/mlflow_server/: test_server.py
tests/mlops/: test_Experiment.py  test_cli.py
tools/: README.md
tools/datatoolkit/: LICENSE.txt  README.md  setup.py  view.py
(+25 files in other folders)
