[metadata]
name = csc-mlops
version = attr: mlops._version.__version__
url = https://github.com/GSTT-CSC/MLOps
author = Laurence Jackson
author_email = laurence.jackson@gstt.nhs.uk
description = An MLOps framework for development of clinical applications
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = <3.11
install_requires =
    mlflow==2.0.1
    boto3
    docker
    minio
    colorlog
    monai
    itk
    pandas
    matplotlib
    xnat
    GitPython
    PyYAML
    click

[options.entry_points]
console_scripts =
    mlops = mlops.cli:entry_point
