[metadata]
name = csc-mlops
version = attr: mlops._version.__version__
url = https://github.com/GSTT-CSC/MLOps
author = GSTT-CSC
author_email = ClinicalScientificComputing@gstt.nhs.uk
description = An MLOps framework for development of clinical applications
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = <3.12
install_requires =
    mlflow==2.10.0
    boto3
    docker
    minio
    colorlog
    monai
    itk
    pandas
    matplotlib
    xnat
    GitPython
    PyYAML
    click
    tqdm
    requests==2.31.0

[options.entry_points]
console_scripts =
    mlops = mlops.cli:cli
